Fixed vertical align for no results page in crowd

--- a/bekindred/static/persiceApp/src/assets/css/screen.css
+++ b/bekindred/static/persiceApp/src/assets/css/screen.css
@@ -8698,7 +8698,13 @@ ul.tagit li.tagit-choice .tagit-close {
 
 .no-results {
   text-align: center;
-  padding: 125px 20px 20px 20px !important
+  padding: 125px 20px 20px 20px !important;
+  padding: 20px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: calc(100vh - 80px);
 }
 
 .no-results__title {
